freeimage.nim


proc FreeImage_GetColorsUsed*(dib: ptr FIBITMAP): cuint {.
    importc: "FreeImage_GetColorsUsed", dynlib: FreeImageLib.}
proc FreeImage_GetBPP*(dib: ptr FIBITMAP): cuint {.importc: "FreeImage_GetBPP", 
    dynlib: FreeImageLib.}
proc FreeImage_GetWidth*(dib: ptr FIBITMAP): cuint {.
    importc: "FreeImage_GetWidth", dynlib: FreeImageLib.}
proc FreeImage_GetHeight*(dib: ptr FIBITMAP): cuint {.
    importc: "FreeImage_GetHeight", dynlib: FreeImageLib.}
proc FreeImage_GetLine*(dib: ptr FIBITMAP): cuint {.
    importc: "FreeImage_GetLine", dynlib: FreeImageLib.}
proc FreeImage_GetPitch*(dib: ptr FIBITMAP): cuint {.
    importc: "FreeImage_GetPitch", dynlib: FreeImageLib.}
proc FreeImage_GetDIBSize*(dib: ptr FIBITMAP): cuint {.
    importc: "FreeImage_GetDIBSize", dynlib: FreeImageLib.}
proc FreeImage_GetPalette*(dib: ptr FIBITMAP): ptr RGBQUAD {.
    importc: "FreeImage_GetPalette", dynlib: FreeImageLib.}
proc FreeImage_GetDotsPerMeterX*(dib: ptr FIBITMAP): cuint {.
    importc: "FreeImage_GetDotsPerMeterX", dynlib: FreeImageLib.}
proc FreeImage_GetDotsPerMeterY*(dib: ptr FIBITMAP): cuint {.
    importc: "FreeImage_GetDotsPerMeterY", dynlib: FreeImageLib.}
proc FreeImage_SetDotsPerMeterX*(dib: ptr FIBITMAP; res: cuint) {.
    importc: "FreeImage_SetDotsPerMeterX", dynlib: FreeImageLib.}
proc FreeImage_SetDotsPerMeterY*(dib: ptr FIBITMAP; res: cuint) {.
    importc: "FreeImage_SetDotsPerMeterY", dynlib: FreeImageLib.}
proc FreeImage_GetInfoHeader*(dib: ptr FIBITMAP): ptr BITMAPINFOHEADER {.
    importc: "FreeImage_GetInfoHeader", dynlib: FreeImageLib.}
proc FreeImage_GetInfo*(dib: ptr FIBITMAP): ptr BITMAPINFO {.
    importc: "FreeImage_GetInfo", dynlib: FreeImageLib.}
proc FreeImage_GetColorType*(dib: ptr FIBITMAP): FREE_IMAGE_COLOR_TYPE {.
    importc: "FreeImage_GetColorType", dynlib: FreeImageLib.}
proc FreeImage_GetRedMask*(dib: ptr FIBITMAP): cuint {.
    importc: "FreeImage_GetRedMask", dynlib: FreeImageLib.}
proc FreeImage_GetGreenMask*(dib: ptr FIBITMAP): cuint {.
    importc: "FreeImage_GetGreenMask", dynlib: FreeImageLib.}
proc FreeImage_GetBlueMask*(dib: ptr FIBITMAP): cuint {.
    importc: "FreeImage_GetBlueMask", dynlib: FreeImageLib.}
proc FreeImage_GetTransparencyCount*(dib: ptr FIBITMAP): cuint {.
    importc: "FreeImage_GetTransparencyCount", dynlib: FreeImageLib.}
proc FreeImage_GetTransparencyTable*(dib: ptr FIBITMAP): ptr BYTE {.
    importc: "FreeImage_GetTransparencyTable", dynlib: FreeImageLib.}
proc FreeImage_SetTransparent*(dib: ptr FIBITMAP; enabled: BOOL) {.
    importc: "FreeImage_SetTransparent", dynlib: FreeImageLib.}
proc FreeImage_SetTransparencyTable*(dib: ptr FIBITMAP; table: ptr BYTE; 
                                     count: cint) {.
    importc: "FreeImage_SetTransparencyTable", dynlib: FreeImageLib.}
proc FreeImage_IsTransparent*(dib: ptr FIBITMAP): BOOL {.
    importc: "FreeImage_IsTransparent", dynlib: FreeImageLib.}
proc FreeImage_SetTransparentIndex*(dib: ptr FIBITMAP; index: cint) {.
    importc: "FreeImage_SetTransparentIndex", dynlib: FreeImageLib.}
proc FreeImage_GetTransparentIndex*(dib: ptr FIBITMAP): cint {.
    importc: "FreeImage_GetTransparentIndex", dynlib: FreeImageLib.}
proc FreeImage_HasBackgroundColor*(dib: ptr FIBITMAP): BOOL {.
    importc: "FreeImage_HasBackgroundColor", dynlib: FreeImageLib.}
proc FreeImage_GetBackgroundColor*(dib: ptr FIBITMAP; bkcolor: ptr RGBQUAD): BOOL {.
    importc: "FreeImage_GetBackgroundColor", dynlib: FreeImageLib.}
proc FreeImage_SetBackgroundColor*(dib: ptr FIBITMAP; bkcolor: ptr RGBQUAD): BOOL {.
    importc: "FreeImage_SetBackgroundColor", dynlib: FreeImageLib.}
proc FreeImage_GetThumbnail*(dib: ptr FIBITMAP): ptr FIBITMAP {.
    importc: "FreeImage_GetThumbnail", dynlib: FreeImageLib.}
proc FreeImage_SetThumbnail*(dib: ptr FIBITMAP; thumbnail: ptr FIBITMAP): BOOL {.
    importc: "FreeImage_SetThumbnail", dynlib: FreeImageLib.}
# ICC profile routines -----------------------------------------------------

proc FreeImage_GetICCProfile*(dib: ptr FIBITMAP): ptr FIICCPROFILE {.
    importc: "FreeImage_GetICCProfile", dynlib: FreeImageLib.}
proc FreeImage_CreateICCProfile*(dib: ptr FIBITMAP; data: pointer; size: clong): ptr FIICCPROFILE {.
    importc: "FreeImage_CreateICCProfile", dynlib: FreeImageLib.}
proc FreeImage_DestroyICCProfile*(dib: ptr FIBITMAP) {.
    importc: "FreeImage_DestroyICCProfile", dynlib: FreeImageLib.}
# Line conversion routines -------------------------------------------------
